# Mython

./: CMakeLists.txt  README.md  main.cpp
include/: lexer.h  runtime.h  statement.h
src/: lexer.cpp  lexer_test.cpp  parse_test.cpp  runtime.cpp  statement_test.cpp
